# backend/docs/swagger.json
@@ -15,6 +15,29 @@
     "host": "localhost:8880",
     "basePath": "/api",
     "paths": {
+        "/attempts/exam/{examId}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "Reports"
+                ],
+                "summary": "ดูคะแนนสอบรายบุคคล (สำหรับครู)",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Exam ID",
+                        "name": "examId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/attempts/history": {
             "get": {
                 "security": [
